--- a/multi-step-form/index.html
+++ b/multi-step-form/index.html
@@ -1,10 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-   
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Mul-step</title>
+
+   
   </head>
   <body>
     <div id="app"></div>
